--- a/MyTrade/Views/Home/ForgetPassword.cshtml
+++ b/MyTrade/Views/Home/ForgetPassword.cshtml
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
-    <title>Login /My Trade</title>
+    <title>Forget Password /My Trade</title>
     <link rel="icon" type="image/x-icon" href="~/assets/img/favicon.ico" />
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
@@ -27,7 +27,8 @@
             background-size: cover;
             background-color: #ffffff;
         }
-          .maintanence-hero-img img {
+
+        .maintanence-hero-img img {
             width: 100px;
             height: 100px;
         }
@@ -42,51 +43,34 @@
                         <div class="maintanence-hero-img">
                             <img alt="logo" src="~/assets/img/tradelogo.png">
                         </div>
-                        <h1 class="">Sign In</h1>
-                        <p class="">Log in to your account to continue.</p>
-                        @using (Html.BeginForm("LoginAction", "Home", FormMethod.Post, new { @id = "Form1" }))
+                        <h1 class="">Forget Password</h1><br />
+                        @*<p class="">Log in to your account to continue.</p>*@
+                        @using (Html.BeginForm("ForgetPassword", "Home", FormMethod.Post, new { @id = "Form1" }))
                         {
                             <div id="username-field" class="field-wrapper input">
                                 <div class="d-flex justify-content-between">
-                                    <label for="password">Login Id</label>
+                                    <label for="password">Email</label>
                                 </div>
-                                @*<label for="LoginId">Login Id</label>*@
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
-                                @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @Placeholder = "Login Id", @required = "required" })
+                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @Placeholder = "Email Id" })
                             </div>
-
-                                <div id="password-field" class="field-wrapper input mb-2">
-                                    <div class="d-flex justify-content-between">
-                                        <label for="password">Password</label>
-                                    </div>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-lock"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg>
-                                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", @Placeholder = "Password", @required = "required" })
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" id="toggle-password" class="feather feather-eye"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>
-                                </div>
                                 <div class="d-sm-flex justify-content-between">
                                     <div class="field-wrapper">
-                                        <input type="submit" id="Login" class="btn btn-primary float-right btn-inline" name="Login" value="Log In" />
-                                        <p  style="text-align:right;margin-top:60px;">
-                                            <a href="/Home/ForgetPassword">Forget Password</a>
-                                        </p>
+                                        <input type="submit" id="forgetpassword" class="btn btn-primary float-right btn-inline" name="forgetpassword" value="Submit" onclick="return validateform();" />
+                                     
                                     </div>
                                 </div>
-
                                 <div class="division">
-                                    <span class="text-danger"> @TempData["Login"] </span>
+                                    <span class="text-danger"> @TempData["Login"] </span><br />
                                     <span>OR</span>
-
                                 </div>
-                                <p class="signup-link">Not registered ? <a href="/Home/Registration">Create an account</a></p>
-
+                                <p class="signup-link">Back To <a href="/Home/Login">Log In</a></p>
                         }
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
     <!-- BEGIN GLOBAL MANDATORY SCRIPTS -->
     <script src="~/assets/js/libs/jquery-3.1.1.min.js"></script>
     <script src="~/bootstrap/js/popper.min.js"></script>
@@ -94,6 +78,27 @@
     <!-- END GLOBAL MANDATORY SCRIPTS -->
     <script src="~/assets/js/authentication/form-2.js"></script>
 </body>
-
 <!-- Mirrored from designreset.com/cork/ltr/demo4/auth_login_boxed.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 18 Sep 2021 04:25:50 GMT -->
 </html>
+<script>
+    $(document).ready(function () {
+        $("#divload").css({ 'display': 'none' });
+    });
+    function validateform() {
+        $(".errortext").removeClass("errortext");
+        if ($('#Email').val() == '') {
+            $("#Email").addClass('errortext');
+            $('#Email').focus();
+            return false;
+        }
+        $("#divload").css({ 'display': '' });
+        return true;
+    }
+</script>
+<style>
+    .errortext {
+        border: 1px solid red !important;
+        background-color: #fff0f0 !important;
+    }
+</style>
+
