--- a/MyTrade/Views/Shared/_Layout.cshtml
+++ b/MyTrade/Views/Shared/_Layout.cshtml
@@ -66,6 +66,11 @@
                 </li>
             </ul>
             <ul class="navbar-item flex-row ml-md-auto">
+                <li>
+                    <p style="margin-top:14px;margin-right:50px;">
+                        <a href="/Admin/ChangePassword"style="color:#ebecf7;">Change Password </a>
+                    </p>
+                </li>
                 <li class="nav-item dropdown user-profile-dropdown">
                     <a href="javascript:void(0);" class="nav-link dropdown-toggle user" id="userProfileDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                         <img src="~/assets/img/tradelogo.png" alt="@Session["FullName"]">
@@ -78,7 +83,6 @@
                         </div>
                     </div>
                 </li>
-
             </ul>
         </header>
     </div>
