--- a/MyTrade/Views/User/UserDashBoard.cshtml
+++ b/MyTrade/Views/User/UserDashBoard.cshtml
@@ -22,7 +22,7 @@
 
     @@media only screen and (min-width: 1200px) {
         .referral-url {
-            width: 600px;
+            /*width: 600px;*/
         }
     }
 
@@ -69,12 +69,12 @@
                 <div class="widget-content">
                     <div class="w-header">
                         <div class="w-info">
-                            <h6 class="value">Total Downline</h6>
+                            <h6 class="value">Total Business</h6>
                         </div>
                     </div>
                     <div class="w-content">
                         <div class="w-info">
-                            <p class="value">@ViewBag.TotalDownline</p>
+                            <p class="value">@ViewBag.TotalBusiness</p>
                         </div>
 
                     </div>
@@ -156,19 +156,21 @@
     {
         <div class="card">
             <div class="card-body">
-                <h6 class="referral"><u>Referral Link</u></h6>
-                <div class="row m-2">
-                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                <h6 class="referral">Referral Link</h6>
+                <div class="row my-2">
+                    <div class="col-xl-10 col-lg-10 col-md-10 col-sm-10 col-10">
                         <div class="referral-url copy">
                             <a target="_blank" style="font-size: 14px;" href="http://mytrade.co.in//Home/Registration?Pid=@MyTrade.Crypto.Encrypt(Session["LoginId"].ToString())">http://mytrade.co.in//Home/Registration?Pid=@MyTrade.Crypto.Encrypt(Session["LoginId"].ToString())</a>
                             @*<button type="button" id="btnLeft" class="btn_my_referral">
                                     <i class="far fa-copy" id="left"></i> Copy
                                 </button>*@
+
                         </div>
+
                     </div>
-                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
-                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                            Share
+                    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-2 p-0">
+                        <button type="button" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModal">
+                            <i class="fa fa-share"></i>
                         </button>
                         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -218,12 +220,15 @@
                         <div class="row">
                             <div class="col-xl-6 col-md-6 col-sm-6 col-6">
                                 <h4>User </h4>
-                                <div id="AssociateDetails1" style="width: 500px; height: 300px;"></div>
+                                <div id="AssociateDetails1" style="width: 100%; height: 300px;"></div>
                             </div>
-                            <div class="col-xl-6 col-md-6 col-sm-6 col-6">
-                                <h4>Business</h4>
-                                <div id="PayoutDetails1" style="width: 500px; height: 300px;"></div>
-                            </div>
+                            @if (ViewBag.TotalBusiness != "0.00")
+                            {
+                                <div class="col-xl-6 col-md-6 col-sm-6 col-6">
+                                    <h4>Business</h4>
+                                    <div id="PayoutDetails1" style="width: 100%; height: 300px;"></div>
+                                </div>
+                            }
                         </div>
                     </div>
                 </div>
