--- a/MyTrade/Views/User/UserProfile.cshtml
+++ b/MyTrade/Views/User/UserProfile.cshtml
@@ -29,15 +29,15 @@
                         <div class="row mb-4">
                             <div class="col-md-4">
                                 <label for="LoginId">Login Id</label>
-                                @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @disabled = "disabled" })
+                                @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @readonly = "true" })
                             </div>
                             <div class="col-md-4">
                                 <label for="Package">Sponsor Id <span style="color:red">*</span></label>
-                                @Html.TextBoxFor(m => m.SponsorId, new { @class = "form-control", @disabled = "disabled" })
+                                @Html.TextBoxFor(m => m.SponsorId, new { @class = "form-control", @readonly = "true" })
                             </div>
                             <div class="col-md-4">
                                 <label for="Package">Sponsor Name <span style="color:red">*</span></label>
-                                @Html.TextBoxFor(m => m.SponsorName, new { @class = "form-control", @disabled = "disabled" })
+                                @Html.TextBoxFor(m => m.SponsorName, new { @class = "form-control", @readonly = "true" })
                             </div>
                         </div>
                         <div class="row mb-4">
@@ -55,7 +55,6 @@
                             </div>
                         </div>
                         <div class="row mb-4">
-                        
                             <div class="col-md-4">
                                 <label for="Package">Email <span style="color:red">*</span></label>
                                 @Html.TextBoxFor(m => m.Email, new { @class = "form-control"})
@@ -71,7 +70,6 @@
                             </div>
                         </div>
                         <div class="row mb-4">
-                           
                             <div class="col-md-4">
                                 <label for="Package">State </label>
                                 @Html.TextBoxFor(m => m.State, new { @class = "form-control", @readonly = "true" })
@@ -87,7 +85,19 @@
                             </div>
                         </div>
                         <div class="row mb-4">
-                           
+                            <div class="col-md-4">
+                                <label for="AdharNo">Aadhar No. </label>
+                                @Html.TextBoxFor(m => m.AdharNo, new { @class = "form-control",@maxlength="12", @onkeypress = "return isNumberKey(event);" })
+                            </div>
+                            <div class="col-md-4">
+                                <label for="PanNo">PAN No </label>
+                                @Html.TextBoxFor(m => m.PanNo, new { @class = "form-control" , @onchange= "return validatePan();" })
+                            </div>
+                            <div class="col-md-4">
+                                <label for="Address">Address </label>
+                               <input type="hidden" id="hdfAddress" value="@Model.Address"/>
+                                @Html.TextAreaFor(m => m.Address, new { @class = "form-control" })
+                            </div>
                         </div>
                         <input class="btn btn-success" name="btn_Pin" id="btn_Pin" type="submit" value="Update" onclick="return ValidateForm();" />
                     </div>
@@ -124,6 +134,7 @@
     }
     $(document).ready(function () {
         $("#Gender").val($("#hdf").val()).attr("selected", "selected");
+        $("#Address").text($("#hdfAddress").val());
     })
     function isNumberKey(evt) {
 
@@ -152,5 +163,17 @@
             return false;
         }
         return true;
+    }
+    function validatePan() {
+        var panVal = $('#PanNo').val();
+        var regpan = /^([a-zA-Z]){5}([0-9]){4}([a-zA-Z]){1}?$/;
+
+        if (regpan.test(panVal)) {
+            $("#PanNo").removeClass('errortext');
+        } else {
+            alert("Invalid PAN Number");
+            $("#PanNo").val('');
+            $("#PanNo").addClass('errortext');
+        }
     }
 </script>
