--- a/MyTrade/Views/AdminReports/DirectListForAdmin.cshtml
+++ b/MyTrade/Views/AdminReports/DirectListForAdmin.cshtml
@@ -40,13 +40,13 @@
                                 <div class="col-lg-3">
                                     <div class="form-group">
                                         <label>From Date  </label>
-                                        @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control" })
+                                        @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control",@readonly=true })
                                     </div>
                                 </div>
                                 <div class="col-lg-3">
                                     <div class="form-group">
                                         <label>To Date  </label>
-                                        @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control" })
+                                        @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control",@readonly=true })
                                     </div>
                                 </div>
                                 @*<div class="col-md-3">
