--- a/MyTrade/Views/Shared/_UserLayout.cshtml
+++ b/MyTrade/Views/Shared/_UserLayout.cshtml
@@ -210,7 +210,10 @@
                         <ul class="collapse submenu list-unstyled" id="Setting" data-parent="#accordionExample">
 
                             <li>
-                                <a href="/User/UserProfile">Profile</a>
+                                <a href="/User/ViewProfile">View Profile</a>
+                            </li>
+                            <li>
+                                <a href="/User/BankDetailsUpdate">Bank Details</a>
                             </li>
                             <li>
                                 <a href="/User/ChangePasswordForUser">Change Password</a>
