--- a/MyTrade/Views/User/UserProfile.cshtml
+++ b/MyTrade/Views/User/UserProfile.cshtml
@@ -3,13 +3,17 @@
     ViewBag.Title = "UserProfile";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
 }
+
+<link rel="stylesheet" type="text/css" href="~/plugins/dropify/dropify.min.css">
+<link href="~/assets/css/users/account-setting.css" rel="stylesheet" type="text/css" />
 <style>
     .errortext {
         border: 2px solid red !important;
         background-color: #ffd3c6 !important;
     }
 </style>
-@using (Html.BeginForm("UserProfile", "User", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
+
+@using (Html.BeginForm("ViewProfile", "User", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
     <div class="container">
         <div class="row layout-top-spacing">
@@ -18,69 +22,11 @@
                     <div class="widget-header">
                         <div class="row">
                             <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                                <h4>Profile Details</h4>
                                 <span class="text-danger">
                                     @TempData["UserProfile"]
                                 </span>
                             </div>
                         </div>
-                    </div>
-                    <div class="widget-content widget-content-area">
-                        <div class="row mb-4">
-                            <div class="col-md-4">
-                                <label for="LoginId">Login Id</label>
-                                @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @readonly = "true" })
-                            </div>
-                            <div class="col-md-4">
-                                <label for="Package">Sponsor Id <span style="color:red">*</span></label>
-                                @Html.TextBoxFor(m => m.SponsorId, new { @class = "form-control", @readonly = "true" })
-                            </div>
-                            <div class="col-md-4">
-                                <label for="Package">Sponsor Name <span style="color:red">*</span></label>
-                                @Html.TextBoxFor(m => m.SponsorName, new { @class = "form-control", @readonly = "true" })
-                            </div>
-                        </div>
-                        <div class="row mb-4">
-                            <div class="col-md-4">
-                                <label for="LoginId">First Name <span style="color:red">*</span></label>
-                                @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
-                            </div>
-                            <div class="col-md-4">
-                                <label for="Package">Last Name </label>
-                                @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
-                            </div>
-                            <div class="col-md-4">
-                                <label for="Package">Mobile No <span style="color:red">*</span></label>
-                                @Html.TextBoxFor(m => m.MobileNo, new { @class = "form-control",@maxlength="10", @onkeypress = "return isNumberKey(event);" })
-                            </div>
-                        </div>
-                        <div class="row mb-4">
-                            <div class="col-md-4">
-                                <label for="Package">Email <span style="color:red">*</span></label>
-                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control"})
-                            </div>
-                            <div class="col-md-4">
-                                <label for="Package">Gender <span style="color:red">*</span></label>
-                                <input type="hidden" id="hdf" value="@Model.Gender">
-                                @Html.DropDownListFor(m => m.Gender, new SelectList(ViewBag.Gender, "Value", "Text"), "-Select-", new { @class = "form-control" })
-                            </div>
-                            <div class="col-md-4">
-                                <label for="Package">Pin Code </label>
-                                @Html.TextBoxFor(m => m.PinCode, new { @class = "form-control", @onchange = "return getstatecity()" })
-                            </div>
-                        </div>
-                        <div class="row mb-4">
-                            <div class="col-md-4">
-                                <label for="Package">State </label>
-                                @Html.TextBoxFor(m => m.State, new { @class = "form-control", @readonly = "true" })
-                            </div>
-                            <div class="col-md-4">
-                                <label for="Package">City </label>
-                                @Html.TextBoxFor(m => m.City, new { @class = "form-control", @readonly = "true" })
-                            </div>
-
-                        </div>
-
                     </div>
                     <div class="widget-header">
                         <div class="row">
@@ -91,34 +37,55 @@
                         </div>
                     </div>
                     <div class="widget-content widget-content-area">
-                        <div class="row mb-4">
-                            <div class="col-md-4">
-                                <label for="Package">Photo </label>
+                        <div class="row">
+                            <div class="col-xl-2 col-lg-12 col-md-4">
+                                <div class="upload mt-4 pr-md-4">
+                                    @if (Model.ProfilePic != "")
+                                    {
+                                        <input type="file" id="postedFile" class="dropify" onchange="readURL(this)" data-default-file="@Model.ProfilePic" data-max-file-size="2M" name="postedFile"/>
+                                    }
+                                    else
+                                    {
+                                        <input type="file" id="postedFile" class="dropify" onchange="readURL(this)" data-default-file="~/assets/img/usericon.jpg" data-max-file-size="2M" name="postedFile"/>
+                                    }
+                                </div>
+                            </div>
+                            <div class="col-xl-10 col-lg-12 col-md-8 mt-md-0 mt-4">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label for="AdharNo">Aadhar No. </label>
+                                            @Html.TextBoxFor(m => m.AdharNo, new { @class = "form-control", @maxlength = "12", @onkeypress = "return isNumberKey(event);" })
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label for="PanNo">PAN No. </label>
+                                            @Html.TextBoxFor(m => m.PanNo, new { @class = "form-control", @onchange = "return validatePan();" })
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label for="Address">Address </label>
+                                            <input type="hidden" id="hdfAddress" value="@Model.Address" />
+                                            @Html.TextAreaFor(m => m.Address, new { @class = "form-control" })
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <br />
+                                            <input class="btn btn-success" name="btn_Pin" id="btn_Pin" type="submit" value="Update" onclick="return ValidateForm();" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            @*<label for="Package">Photo </label>
                                 <br />
-                                <input type="file" id="postedFile" class="form-control" name="postedFile" onchange="readURL(this)" />
-
-                            </div>
-                            <div class="col-md-4">
-                                <img src="@Model.ProfilePic" height="100px" width="100px" id="imgPic" />
-
-                            </div>
+                                <input type="file" id="postedFile" class="form-control" name="postedFile" onchange="readURL(this)" />*@
                         </div>
-                        <div class="row mb-4">
-                            <div class="col-md-4">
-                                <label for="AdharNo">Aadhar No. </label>
-                                @Html.TextBoxFor(m => m.AdharNo, new { @class = "form-control", @maxlength = "12", @onkeypress = "return isNumberKey(event);" })
-                            </div>
-                            <div class="col-md-4">
-                                <label for="PanNo">PAN No. </label>
-                                @Html.TextBoxFor(m => m.PanNo, new { @class = "form-control", @onchange = "return validatePan();" })
-                            </div>
-                            <div class="col-md-4">
-                                <label for="Address">Address </label>
-                                <input type="hidden" id="hdfAddress" value="@Model.Address" />
-                                @Html.TextAreaFor(m => m.Address, new { @class = "form-control" })
-                            </div>
-                        </div>
-                        <input class="btn btn-success" name="btn_Pin" id="btn_Pin" type="submit" value="Update" onclick="return ValidateForm();" />
+                        
                     </div>
                 </div>
             </div>
@@ -126,6 +93,9 @@
     </div>
 }
 <script src="~/assets/js/libs/jquery-3.1.1.min.js"></script>
+<script src="~/plugins/dropify/dropify.min.js"></script>
+<script src="~/plugins/blockui/jquery.blockUI.min.js"></script>
+<script src="~/assets/js/users/account-settings.js"></script>
 <script>
     function getstatecity() {
         $(".errortext").removeClass("errortext");
@@ -166,21 +136,6 @@
     }
     function ValidateForm() {
         $(".errortext").removeClass("errortext");
-        if ($('#FirstName').val() == '') {
-            $("#FirstName").addClass('errortext');
-            $('#FirstName').focus();
-            return false;
-        }
-        if ($('#MobileNo').val() == '') {
-            $("#MobileNo").addClass('errortext');
-            $('#MobileNo').focus();
-            return false;
-        }
-        if ($('#Email').val() == '') {
-            $("#Email").addClass('errortext');
-            $('#Email').focus();
-            return false;
-        }
         return true;
     }
     function validatePan() {
