--- a/MyTrade/Views/Admin/PaymentTypeMaster.cshtml
+++ b/MyTrade/Views/Admin/PaymentTypeMaster.cshtml
@@ -37,9 +37,9 @@
                                     <div class="col-sm-9">
                                         Status<span style="color: red">*</span>
                                         <select  class = "form-control" id="Status" name="Status">
-                                            <option value="0">Select</option>
-                                            <option value="Active">Active</option>
-                                            <option value="InActive">In Active</option>
+                                            <option value="">Select</option>
+                                            <option value="1">Active</option>
+                                            <option value="0">In Active</option>
                                         </select>
                                     </div>
                                 </div>
