--- a/MyTrade/Views/Admin/PaymentTypeMaster.cshtml
+++ b/MyTrade/Views/Admin/PaymentTypeMaster.cshtml
@@ -47,7 +47,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <input class="btn btn-success pull-left" type="submit" value="Submit" id="Save" name="Save" onclick="return validateform();" />
+                                    <input class="btn btn-success pull-left" type="submit" value="Submit" id="Update" name="Update" onclick="return validateform();" />
                                 </div>
                             </div>
                         </div>
